update swagger with bearer auth and add verify token to all post method end point
